# qingque_moveit

./: .gitignore  activate_env.sh  check_ml_data.py  compare_ml  diagnose_modules.py  moveit_bootstrap.py  moveit_env.py  start_robotpress.sh  stop_robotpress.sh  test.py  test_controller.sh  test_lma  test_trajectory_simple.py  train_lma_model  train_ml.py
docs/: ML种子训练.md  Type_Hints.md  foxglove.md  github.md  moveit_booststrap.py使用指南.md  moveit_env使用指南.md  note.py  numpy.md  quick_start.md  robotpress.md  try1.md  开始.md  最终敲定工作方式.md  环境.md  知識.md  计划.md  训练.md  调用.md
docs/参数相关/: 机械爪参数.md  机械臂参数.md  查看参数指南.md
launch/: start_demo.sh
moveit_core/cache_manager/: README.md  方法指令.md
moveit_core/cache_manager/config/: cache_config.yaml
moveit_core/planning_scene/: diagnose_objects.py  test_collision_values.py
moveit_planners/config/: chomp_planners.yaml  ompl_planners.yaml  stomp_planners.yaml
moveit_planners/src/ompl_planner/: __init__.py  (+5 more)
moveit_ros/: create-perception.sh
moveit_ros/perception/: README.md
moveit_ros/planning_interface/: README.md
robotpress/backend/: bridge.py  requirements.txt  run.sh
robotpress/frontend/: vite.config.ts
scripts/some_tries/: basic_control.py  clear_wall.py  plan_around_wall.py  simple_real_box.py  simple_verify.py  test_collision.py  test_environment.py  test_environment_fixed.py  verify_collision.py  verify_moveit_capability.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/srv/: AddObject.srv  GraspObject.srv  ListObjects.srv  MoveToPose.srv
src/robot_services/: package.xml  setup.py
(+241 files in other folders)
